// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h3
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        ₹235.00
      </span>
    </h3>
    <div
      className="page-header__actions"
    >
      <Link
        activeClassName="is-active"
        className="button"
        to="/create"
      >
        Create Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h3
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
       totalling 
      <span>
        ₹87,000.00
      </span>
    </h3>
    <div
      className="page-header__actions"
    >
      <Link
        activeClassName="is-active"
        className="button"
        to="/create"
      >
        Create Expense
      </Link>
    </div>
  </div>
</div>
`;
